src/main/java/com/crudtest/test/infra/errors/exceptions/InvalidTokenException.java
package com.crudtest.test.infra.errors.exceptions;

public class InvalidTokenException extends RuntimeException {
    public InvalidTokenException(String message) {
        super(message);
    }
}
